@@ -15,11 +15,10 @@
 
 	<?php get_template_part( 'content-postmeta' ); ?>
 
-	<?php if ( has_post_thumbnail() ) { 
-		the_post_thumbnail(); 
-	} ?>
-
 	<div class="entry-content">
+		<?php if ( has_post_thumbnail() ) { 
+			the_post_thumbnail(); 
+		} ?>
 		<?php the_excerpt(); ?>
 	</div>
 
