@@ -22,7 +22,7 @@
 			add_theme_support( 'title-tag' );
 
 		// Add editor styles
-			add_editor_style( 'custom-editor-style.css' );
+			add_editor_style( array( 'custom-editor-style.css', myknowledgebase_font_url() ) );
 
 		// Custom header	
 			$header_args = array(		
@@ -74,7 +74,7 @@
 	function myknowledgebase_scripts() {
 		wp_enqueue_style( 'myknowledgebase-style', get_stylesheet_uri() );
 		wp_enqueue_script( 'myknowledgebase-nav', get_template_directory_uri() . '/js/nav.js', array( 'jquery' ) );
-		wp_enqueue_style( 'myknowledgebase-googlefonts', '//fonts.googleapis.com/css?family=Open+Sans' ); 
+		wp_enqueue_style( 'myknowledgebase-googlefonts', myknowledgebase_font_url() ); 
 
 		// Add html5 support for IE 8 and older 
 		wp_enqueue_script( 'myknowledgebase_html5', get_template_directory_uri() . '/js/ie.js' );
@@ -92,6 +92,13 @@
 		wp_localize_script( 'myknowledgebase-nav', 'objectL10n', $myknowledgebase_mobile_nav_args );
 	}
 	add_action( 'wp_enqueue_scripts', 'myknowledgebase_scripts' );
+
+
+// Font family
+	function myknowledgebase_font_url() {
+		$font_url = '//fonts.googleapis.com/css?family=Open+Sans';
+		return esc_url_raw( $font_url );
+	}
 
 
 // Sidebars
